--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,134 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
 version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/configuration-reference/#jobs
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/configuration-reference/#executor-job
+  build:
     docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/configuration-reference/#steps
+      - image: mcr.microsoft.com/dotnet/sdk:6.0-alpine
+
     steps:
       - checkout
-      - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
 
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/configuration-reference/#workflows
+      - run:
+          name: Restore Dependencies
+          command: |
+            cd src/Lasso
+            dotnet restore
+
+      - run:
+          name: Build
+          command: |
+            cd src/Lasso
+            dotnet build $lib
+
+  test:
+    docker:
+      - image: mcr.microsoft.com/dotnet/sdk:6.0-alpine
+
+    steps:
+      - checkout
+
+      - run:
+          name: Start Redis
+          command: |
+            apk add redis
+            redis-server --daemonize yes
+
+      - run:
+          name: Restore Dependencies
+          command: |
+            cd src/Lasso.Tests
+            dotnet restore
+
+      - run:
+          name: Test
+          command: |
+            cd src/Lasso.Tests
+            dotnet test
+
+  semver:
+    docker:
+      - image: mcr.microsoft.com/dotnet/sdk:6.0-alpine
+
+    steps:
+      - checkout
+
+      - run:
+          name: Install GitVersion
+          command: |
+            dotnet tool install --global gitversion.tool
+
+      - run:
+          name: Get Version
+          command: |
+            export PATH="$PATH:/root/.dotnet/tools"
+            SEMVER=$(dotnet-gitversion /showvariable SemVer)
+            NEXTVER=$(dotnet-gitversion /showvariable MajorMinorPatch)
+            echo "Current branch semver is '$SEMVER'"
+            echo "Main branch candidate semver is '$NEXTVER'"
+
+  deploy_nuget:
+    docker:
+      - image: mcr.microsoft.com/dotnet/sdk:6.0-alpine
+
+    steps:
+      - run:
+          name: Install GitVersion and ssh
+          command: |
+            apk add --no-cache bash openssh-client
+            dotnet tool install --global gitversion.tool
+
+      - add_ssh_keys:
+            fingerprints:
+              - "20:b8:d0:e1:f6:11:db:d2:d7:21:e4:ea:ac:72:32:ed"
+
+      - checkout
+
+      - run:
+          name: Restore Dependencies
+          command: |
+            cd src/Lasso
+            dotnet restore
+
+      - run:
+          name: Get Version
+          shell: /bin/bash
+          command: |
+            export PATH="$PATH:/root/.dotnet/tools"
+            export SEMVER=$(dotnet-gitversion /showvariable SemVer)
+            echo "Releasing version $SEMVER"
+            echo "export SEMVER=\"$SEMVER\"" >> "$BASH_ENV"
+
+      - run:
+          name: Build and Pack
+          shell: /bin/bash
+          command: |
+            cd src/Lasso
+            export PATH="$PATH:/root/.dotnet/tools"
+            dotnet-gitversion /updateprojectfiles
+            dotnet pack
+            dotnet nuget push src/Lasso/bin/Debug/*.nupkg -s https://api.nuget.org/v3/index.json -k $nuget_api_key
+
+      - run:
+          name: Tag Release and Push Changes
+          shell: /bin/bash
+          command: |
+            git branch --set-upstream-to origin/$CIRCLE_BRANCH
+            echo "Tagging release with '$SEMVER'"
+            git tag $SEMVER
+            git push -o ci.skip
+            git push --tags
+
 workflows:
-  say-hello-workflow:
+  test_build_release:
     jobs:
-      - say-hello
+      - build
+      - test:
+          requires:
+            - build
+      - semver
+      - deploy_nuget:
+          requires:
+            - test
+          filters:
+            branches:
+              only: master
