--- a/src/Lasso/Lasso.csproj
+++ b/src/Lasso/Lasso.csproj
@@ -15,4 +15,9 @@ Lasso helps keep track of any kind of quotas or metrics by incrementing or decre
     <PackageReference Include="StackExchange.Redis" Version="2.6.104" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\README.md" Pack="true" PackagePath="\"/>
+    <None Include="..\LICENSE" Pack="true" PackagePath="\"/>
+  </ItemGroup>
+
 </Project>
