--- a/src/Lasso/Lasso.nuspec
+++ b/src/Lasso/Lasso.nuspec
@@ -11,6 +11,8 @@
     <description>$description$</description>
     <releaseNotes></releaseNotes>
     <copyright>Copyright 2023 Joshua Marble</copyright>
+    <readme>docs\README.md</readme>
+    <license>docs\LICENSE</license>
     <dependencies>
       <group targetFramework="net6.0">
         <dependency id="StackExchange.Redis" version="2.6.104" />
@@ -19,5 +21,7 @@
   </metadata>
   <files>
     <file src="bin\Debug\net6.0\Lasso.dll" target="lib\net6.0\Lasso.dll" />
+    <file src="..\..\README.md" target="docs\" />
+    <file src="..\..\LICENSE" target="docs\" />
   </files>
 </package>
