--- a/src/Lasso/Lasso.csproj
+++ b/src/Lasso/Lasso.csproj
@@ -9,6 +9,7 @@
     <Description>A usage quota wrangler. 
 Lasso helps keep track of any kind of quotas or metrics by incrementing or decrementing usage. It stores usage metrics, separated by a specified context, as numbers in a Redis Hashset for named resources. This keeps all usage metrics for a particular context together.
     </Description>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
