--- a/src/Lasso/Lasso.csproj
+++ b/src/Lasso/Lasso.csproj
@@ -13,6 +13,7 @@ Lasso helps keep track of any kind of quotas or metrics by incrementing or decre
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
     <PackageReference Include="StackExchange.Redis" Version="2.6.104" />
   </ItemGroup>
