--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,28 +109,31 @@ jobs:
             # Save the generated NuGet package in the workspace
             cp bin/Debug/*.nupkg $CIRCLE_ARTIFACTS
 
-      - run:
-          name: Publish NuGet Package
-          shell: /bin/bash
-          when: << pipeline.parameters.branch == 'main' >>
-          command: |
-            cd src/Lasso
-            export PATH="$PATH:/root/.dotnet/tools"
-            dotnet-gitversion /updateprojectfiles
-            echo "Publishing NuGet package..."
-            # Access the NuGet package from the workspace
-            dotnet nuget push $CIRCLE_ARTIFACTS/*.nupkg -s https://api.nuget.org/v3/index.json -k $nuget_api_key
-          
-      - run:
-          name: Tag Release and Push Changes
-          shell: /bin/bash
-          when: << pipeline.parameters.branch == 'main' >>
-          command: |
-            git branch --set-upstream-to origin/$CIRCLE_BRANCH
-            echo "Tagging release with '$SEMVER'"
-            git tag $SEMVER
-            git push -o ci.skip
-            git push --tags
+      - when:
+          condition:
+            equal: [ main, << pipeline.git.branch >> ]
+          steps:
+            - run:
+                name: Publish NuGet Package
+                shell: /bin/bash
+                command: |
+                  cd src/Lasso
+                  export PATH="$PATH:/root/.dotnet/tools"
+                  dotnet-gitversion /updateprojectfiles
+                  echo "Publishing NuGet package..."
+                  # Access the NuGet package from the workspace
+                  dotnet nuget push $CIRCLE_ARTIFACTS/*.nupkg -s https://api.nuget.org/v3/index.json -k $nuget_api_key
+
+            - run:
+                name: Tag Release and Push Changes
+                shell: /bin/bash
+                when: << pipeline.parameters.branch == 'main' >>
+                command: |
+                  git branch --set-upstream-to origin/$CIRCLE_BRANCH
+                  echo "Tagging release with '$SEMVER'"
+                  git tag $SEMVER
+                  git push -o ci.skip
+                  git push --tags
 
 workflows:
   test_build_release:
