--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,8 +106,10 @@ jobs:
             export PATH="$PATH:/root/.dotnet/tools"
             dotnet-gitversion /updateprojectfiles
             dotnet pack
-            # Save the generated NuGet package in the workspace
-            cp bin/Debug/*.nupkg $CIRCLE_ARTIFACTS
+            
+      - store_artifacts:
+          path: bin/Debug/*.nupkg
+          destination: nuget-package
 
       - when:
           condition:
@@ -119,10 +121,8 @@ jobs:
                 command: |
                   cd src/Lasso
                   export PATH="$PATH:/root/.dotnet/tools"
-                  dotnet-gitversion /updateprojectfiles
                   echo "Publishing NuGet package..."
-                  # Access the NuGet package from the workspace
-                  dotnet nuget push $CIRCLE_ARTIFACTS/*.nupkg -s https://api.nuget.org/v3/index.json -k $nuget_api_key
+                  dotnet nuget push bin/Debug/*.nupkg -s https://api.nuget.org/v3/index.json -k $nuget_api_key
 
             - run:
                 name: Tag Release and Push Changes
