reinstate dest [skip-ci]

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -112,6 +112,7 @@ jobs:
             
       - store_artifacts:
           path: src/Lasso/nugetpkg
+          destination: nuget
 
       - when:
           condition:
