--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -125,7 +125,7 @@ jobs:
                   cd src/Lasso
                   export PATH="$PATH:/root/.dotnet/tools"
                   echo "Publishing NuGet package..."
-                  dotnet nuget push bin/Debug/*.nupkg -s https://api.nuget.org/v3/index.json -k $nuget_api_key
+                  dotnet nuget push nugetpkg/*.nupkg -s https://api.nuget.org/v3/index.json -k $nuget_api_key
 
             - run:
                 name: Tag Release and Push Changes
